pushing recent changes in styling

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="https://fonts.googleapis.com/css?family=Yeseva+One" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Yeseva+One" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Mukta+Mahee:200" rel="stylesheet"> 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>client</title>
+    <title>Caviar Dreams</title>
   </head>
   <body>
     <div id="app"></div>
